fix align of navbar

--- a/src/components/navigation/NavigationBar.scss
+++ b/src/components/navigation/NavigationBar.scss
@@ -37,9 +37,13 @@
 }
 
 .common-nav-item {
-    padding-top: 23px;
+    // padding-top: 23px;
 }
 
 .nav {
     padding: 24px;
+}
+
+.me-auto.navbar-nav {
+    padding-top: 11px;
 }
